added proper mobile navbar and view

--- a/templates/Travel/b2b/previeww.html
+++ b/templates/Travel/b2b/previeww.html
@@ -171,16 +171,22 @@ body {
 
   <div id="mobileMenu" class="hidden lg:hidden bg-white border-t border-gray-200 w-full">
     <div class="px-6 py-4 space-y-3 text-[var(--navy)] font-medium">
-      <a href="index.html" class="nav-link block hover:text-indigo-600">Back to Generator</a>
-      <a href="#packages" class="nav-link block hover:text-[var(--gold)]">Packages</a>
-      <a href="#visa" class="nav-link block hover:text-[var(--gold)]">Visa Services</a>
-      <a href="#contact" class="nav-link block hover:text-[var(--gold)]">Contact</a>
+      <br>
+      <br>
+      <br>
+      <a href="itinerary.html" class="nav-link block hover:text-indigo-600">Back to Generator</a>
+      <!-- <a href="#packages" class="nav-link block hover:text-[var(--gold)]">Packages</a> -->
+      <!-- <a href="#visa" class="nav-link block hover:text-[var(--gold)]">Visa Services</a> -->
+      <a href="saveditinerary.html" class="nav-link block hover:text-[var(--gold)]">Saved Itinerary</a>
       
       <button id="copyBtnMobile" class="block mt-4 px-4 py-2 rounded-full btn-copy text-center w-full">Copy Text</button>
       
       <button id="pdfBtnMobile" class="block mt-2 px-4 py-2 rounded-full btn-gold text-center w-full">Download PDF</button>
     </div>
   </div>
+  <br>
+  <br>
+  <br>
 </header>
 <main class="max-w-7xl mx-auto p-0 md:p-6">
     <div id="previewWrapper" class="pdf-page"> 
