added proper pages and updated it

--- a/templates/Travel/b2b/Visa/b2b.html
+++ b/templates/Travel/b2b/Visa/b2b.html
@@ -179,7 +179,7 @@
                 <div class="w-[140px] lg:w-[160px] flex-shrink-0"></div>
 
                 <nav class="hidden lg:flex items-center gap-6 text-[var(--navy)]">
-                    <a href="../../../../index.html" class="nav-link-new hover:text-[var(--gold)]">Home</a>
+                    <a href="#" class="nav-link-new text-[var(--gold)] font-bold">Home</a>
                     <a href="../../../../packages/packages.html" class="nav-link-new block hover:text-[var(--gold)]">Packages</a>
                     <a href="./visaquotations.html" class="nav-link-new block hover:text-[var(--gold)]">Visa Services</a>
                     <a href="../../About.html" class="nav-link-new block hover:text-[var(--gold)]">Why Choose Us</a>
