--- a/templates/Travel/b2b/Visa/b2b.html
+++ b/templates/Travel/b2b/Visa/b2b.html
@@ -134,7 +134,7 @@
 
         /* Buttons */
         .btn-custom {
-            background-color: var(--navy); 
+            background-color: #2d2539; 
             color: white;
             border-radius: 10px;
             padding: 10px 20px;
@@ -213,7 +213,7 @@
             <h1 class="font-playfair">B2B Visa Partnership Program</h1>
             <p class="lead mb-4">Grow your travel business with our exclusive monthly visa packages.</p>
             <a href="../b2b.html" class="btn btn-success me-2">Other B2B Services</a>
-            <a href="./visaquotations.html" class="btn btn-custom">Visa Services</a>
+            <a href="./visaquotations.html" class="btn btn-custom">B2B Visa Services</a>
         </div>
     </section>
 
